Adds example solution showing how to use Linq2Db with an in memory Sqlite DB and tests

--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,7 @@ OdpNetCoreExampleLinq2Db/.vs/OdpNetCoreExample/v15/Server/sqlite3/storage.ide
 OdpNetCoreExampleLinq2Db/.vs/OdpNetCoreExample/v15/Server/sqlite3/storage.ide-shm
 OdpNetCoreExampleLinq2Db/.vs/OdpNetCoreExample/v15/Server/sqlite3/storage.ide-wal
 OdpNetCoreExampleLinq2Db/assemblies/Oracle.ManagedDataAccess.dll
+OdpNetCoreExampleLinq2DbWithTests/.vs/OdpNetCoreExample/v15/Server/sqlite3/db.lock
+OdpNetCoreExampleLinq2DbWithTests/.vs/OdpNetCoreExample/v15/Server/sqlite3/storage.ide
+OdpNetCoreExampleLinq2DbWithTests/.vs/config/applicationhost.config
+OdpNetCoreExampleLinq2DbWithTests/assemblies/Oracle.ManagedDataAccess.dll
