--- a/OdpNetCoreExampleLinq2Db/main/Northwind/Northwind.csproj
+++ b/OdpNetCoreExampleLinq2Db/main/Northwind/Northwind.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="linq2db.Core" Version="1.10.2" />
+    <PackageReference Include="linq2db" Version="2.9.0" />
   </ItemGroup>
 
 </Project>
