--- a/OdpNetCoreExampleLinq2Db/tools/OdpNetCoreExample/OdpNetCoreExample.csproj
+++ b/OdpNetCoreExampleLinq2Db/tools/OdpNetCoreExample/OdpNetCoreExample.csproj
@@ -16,7 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="linq2db" Version="2.9.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.31" />
   </ItemGroup>
 
   <ItemGroup>
